hphp/hack/test/typecheck/instanceof/instanceof_generic_bad.php.exp
File "instanceof_generic_bad.php", line 4, characters 21-21:
Name already bound: T (Naming[2012])
File "instanceof_generic_bad.php", line 3, characters 7-7:
Previous definition is here
