hphp/hack/test/typecheck/instanceof/instanceof_generic_bad.php
<?hh

class T {
  public function f<T>(mixed $a): bool {
    return $a is T;
  }
}
